--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -215,6 +215,8 @@ opacity-rule = [
   "70:class_g     = 'TelegramDesktop'",
   "90:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'",
+  "95:class_g     = 'Alacritty'",
+  "95:class_g     = 'st'",
   "100:class_g    = 'Thunderbird'"
 ];
 
