--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -1,6 +1,7 @@
 ## Import files (Colors, Fonts, Etc)
 import:
-  - ~/.config/alacritty/colors.yml
+  - ~/.config/alacritty/colors/doom-one.yml
+#  - ~/.config/alacritty/colors/nord.yml
   - ~/.config/alacritty/fonts.yml
 
 ## Set environment variables
