--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -134,6 +134,21 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 
+opacity-rule = [
+  "80:class_g    = 'Bar'",
+  "100:class_g    = 'XTerm'",
+  "100:class_g    = 'URxvt'",
+  "95:class_g     = 'Alacritty'",
+  "95:class_g     = 'st'",
+  "80:class_g    = 'Polybar'",
+  "100:class_g    = 'code-oss'",
+  "100:class_g    = 'Meld'",
+  "100:class_g    = 'TelegramDesktop'",
+  "100:class_g    = 'Joplin'",
+  "100:class_g    = 'firefox'",
+  "100:class_g    = 'Thunderbird'"
+];
+
 #################################
 #           Corners             #
 #################################
