Fixing qt theme

--- a/qt/.config/qt5ct/qt5ct.conf
+++ b/qt/.config/qt5ct/qt5ct.conf
@@ -1,9 +1,9 @@
 [Appearance]
-color_scheme_path=/usr/share/qt5ct/colors/airy.conf
+color_scheme_path=/usr/share/qt5ct/colors/darker.conf
 custom_palette=false
 icon_theme=Papirus-Dark
 standard_dialogs=default
-style=kvantum
+style=kvantum-dark
 
 [Fonts]
 fixed=@Variant(\0\0\0@\0\0\0\b\0S\0\x61\0n\0s@$\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
