--- a/qt/.config/qt5ct/qt5ct.conf
+++ b/qt/.config/qt5ct/qt5ct.conf
@@ -3,7 +3,7 @@ color_scheme_path=/usr/share/qt5ct/colors/darker.conf
 custom_palette=false
 icon_theme=Papirus-Dark
 standard_dialogs=default
-style=kvantum-dark
+style=gtk2
 
 [Fonts]
 fixed=@Variant(\0\0\0@\0\0\0\b\0S\0\x61\0n\0s@$\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
@@ -19,7 +19,7 @@ gui_effects=@Invalid()
 keyboard_scheme=2
 menus_have_icons=true
 show_shortcuts_in_context_menus=true
-stylesheets=@Invalid()
+stylesheets=/usr/share/qt5ct/qss/fusion-fixes.qss
 toolbutton_style=4
 underline_shortcut=1
 wheel_scroll_lines=3
