--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -1,12 +1,11 @@
 ## Import files (Colors, Fonts, Etc)
 import:
-  - ~/.config/alacritty/colors/doom-one.yml
-#  - ~/.config/alacritty/colors/nord.yml
+  - ~/.config/alacritty/colors/gruvbox.yml
   - ~/.config/alacritty/fonts.yml
 
 ## Set environment variables
 env:
-  TERM: alacritty
+  TERM: xterm-256color
 
 ## Terminal window settings
 window:
