--- a/arch-pkgs/pacman.conf
+++ b/arch-pkgs/pacman.conf
@@ -84,5 +84,9 @@ Include = /etc/pacman.d/mirrorlist
 [multilib]
 Include = /etc/pacman.d/mirrorlist
 
+[wc-repo]
+SigLevel = Optional DatabaseOptional
+Server = https://raw.githubusercontent.com/WitherCubes/wc-repo/master/x86_64
+
 [chaotic-aur]
 Include = /etc/pacman.d/chaotic-mirrorlist
