--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# BetterDiscord
+discord/.config/BetterDiscord/data
+discord/.config/BetterDiscord/plugins
+
 # MelonDS
 melonDS/.config/melonDS/biosdsi7.bin
 melonDS/.config/melonDS/biosdsi9.bin
