Catppuccin > Gruvbox > Onedark

--- a/arch-pkgs/pacman.conf
+++ b/arch-pkgs/pacman.conf
@@ -86,7 +86,7 @@ Include = /etc/pacman.d/mirrorlist
 
 [wc-repo]
 SigLevel = Optional DatabaseOptional
-Server = https://raw.githubusercontent.com/WitherCubes/wc-repo/master/x86_64
+Server = https://raw.githubusercontent.com/WitherCubes/$repo/master/x86_64
 
 [chaotic-aur]
 Include = /etc/pacman.d/chaotic-mirrorlist
