Forgot to change white in the theme

--- a/kitty/.config/kitty/catppuccin.conf
+++ b/kitty/.config/kitty/catppuccin.conf
@@ -7,7 +7,7 @@
 ## blurb: Soothing pastel theme for the high-spirited!
 
 # The basic colors
-foreground              #DADAE8
+foreground              #D9E0EE
 background              #1E1D2F
 selection_foreground    #F5C2E7
 selection_background    #302D41
@@ -29,7 +29,7 @@ wayland_titlebar_color system
 macos_titlebar_color system
 
 #: Tab bar colors
-active_tab_foreground   #DADAE8
+active_tab_foreground   #D9E0EE
 active_tab_background   #1E1D2F
 inactive_tab_foreground #96CDFB
 inactive_tab_background #1A1823
@@ -75,5 +75,5 @@ color6  #F5C2E7
 color14 #F5C2E7
 
 #: white
-color7  #DADAE8
-color15 #DADAE8
+color7  #D9E0EE
+color15 #D9E0EE
