chore: Updating the Colors (again)

--- a/kitty/.config/kitty/catppuccin.conf
+++ b/kitty/.config/kitty/catppuccin.conf
@@ -8,13 +8,13 @@
 
 # The basic colors
 foreground              #D9E0EE
-background              #1E1D2F
+background              #1E1E2E
 selection_foreground    #F5C2E7
 selection_background    #302D41
 
 # Cursor colors
 cursor                  #ABE9B3
-cursor_text_color       #1E1D2F
+cursor_text_color       #1E1E2E
 
 # URL underline color when hovering with mouse
 url_color               #96CDFB
@@ -30,18 +30,18 @@ macos_titlebar_color system
 
 #: Tab bar colors
 active_tab_foreground   #D9E0EE
-active_tab_background   #1E1D2F
+active_tab_background   #1E1E2E
 inactive_tab_foreground #96CDFB
-inactive_tab_background #1A1823
-tab_bar_background      #131020
+inactive_tab_background #1A1826
+tab_bar_background      #161320
 
 # Colors for marks (marked text in the terminal)
 
-mark1_foreground #1E1D2F
+mark1_foreground #1E1E2E
 mark1_background #F8BD96
-mark2_foreground #1E1D2F
+mark2_foreground #1E1E2E
 mark2_background #C3BAC6
-mark3_foreground #1E1D2F
+mark3_foreground #1E1E2E
 mark3_background #DDB6F2
 
 #: The 16 terminal colors
