--- a/kitty/.config/kitty/catppuccin.conf
+++ b/kitty/.config/kitty/catppuccin.conf
@@ -9,19 +9,19 @@
 # The basic colors
 foreground              #D9E0EE
 background              #1E1E2E
-selection_foreground    #F5C2E7
-selection_background    #302D41
+selection_foreground    #D9E0EE
+selection_background    #575268
 
 # Cursor colors
-cursor                  #ABE9B3
+cursor                  #F5E0DC
 cursor_text_color       #1E1E2E
 
 # URL underline color when hovering with mouse
-url_color               #96CDFB
+url_color               #F5E0DC
 
 # kitty window border colors
-active_border_color     #F5C2E7
-inactive_border_color   #6E6C7E
+active_border_color     #C9CBFF
+inactive_border_color   #575268
 bell_border_color       #FAE3B0
 
 # OS Window titlebar colors
@@ -29,26 +29,26 @@ wayland_titlebar_color system
 macos_titlebar_color system
 
 #: Tab bar colors
-active_tab_foreground   #D9E0EE
-active_tab_background   #1E1E2E
-inactive_tab_foreground #96CDFB
-inactive_tab_background #1A1826
+active_tab_foreground   #F5C2E7
+active_tab_background   #575268
+inactive_tab_foreground #D9E0EE
+inactive_tab_background #1E1E2E
 tab_bar_background      #161320
 
 # Colors for marks (marked text in the terminal)
 
 mark1_foreground #1E1E2E
-mark1_background #F8BD96
+mark1_background #96CDFB
 mark2_foreground #1E1E2E
-mark2_background #C3BAC6
+mark2_background #F5C2E7
 mark3_foreground #1E1E2E
-mark3_background #DDB6F2
+mark3_background #B5E8E0
 
 #: The 16 terminal colors
 
 #: black
 color0 #6E6C7E
-color8 #6E6C7E
+color8 #988BA2
 
 #: red
 color1 #F28FAD
@@ -67,12 +67,12 @@ color4  #96CDFB
 color12 #96CDFB
 
 #: magenta
-color5  #DDB6F2
-color13 #DDB6F2
+color5  #F5C2E7
+color13 #F5C2E7
 
 #: cyan
-color6  #F5C2E7
-color14 #F5C2E7
+color6  #89DCEB
+color14 #89DCEB
 
 #: white
 color7  #D9E0EE
