--- a/alacritty/.config/alacritty/colors/catppuccin.yml
+++ b/alacritty/.config/alacritty/colors/catppuccin.yml
@@ -2,12 +2,12 @@
 colors:
   # Default colors
   primary:
-    background: '0x1E1D2F'
+    background: '0x1E1E2E'
     foreground: '0xD9E0EE'
 
   # Colors the cursor will use if `custom_cursor_colors` is true
   cursor:
-    text: '0x1E1D2F'
+    text: '0x1E1E2E'
     cursor: '0xF5E0DC'
 
   # Normal colors
