--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Sanjay Pavan
-	email = tsppavan7@gmail.com
+	email = withercubes@protonmail.com
 	signingkey = 4F4161E20E15A496
 [alias]
 	hist = log --pretty=format:'%h %ad [%an] %s%d ' --graph --date=short
