Update to spectrwm

--- a/spectrwm/.spectrwm.conf
+++ b/spectrwm/.spectrwm.conf
@@ -34,6 +34,8 @@ autorun = ws[1]:~/.config/spectrwm/autostart.sh
 # Quirks
 quirk[trayer] = FLOAT + ANYWHERE + MINIMALBORDER + NOFOCUSCYCLE + NOFOCUSONMAP
 quirk[discord:discord] = WS[3]
+quirk[Thunar:thunar] = IGNORESPAWNWS
+quirk[Gimp:gimp] = IGNORESPAWNWS
 
 # Mod key
 modkey = Mod4
