--- a/spectrwm/.spectrwm.conf
+++ b/spectrwm/.spectrwm.conf
@@ -19,7 +19,7 @@ bar_enabled	= 1
 bar_border_width = 3
 bar_border[1] = rgb:1e/1e/2e
 bar_color[1] = rgb:1e/1e/2e
-bar_color_selected[1] = rgb:1e/1e/2e
+bar_color_selected[1] = rgb:dd/b6/f2
 bar_font_color[1] = rgb:d9/e0/ee, rgb:6e/6c/7e
 bar_font_color_selected	= rgb:1e/1e/2e
 bar_font = Hack Nerd Font:pixelsize=16:antialias=true
@@ -42,6 +42,7 @@ modkey = Mod4
 
 # Unbindings
 bind[] = MOD+space
+bind[] = MOD+Shift+x
 
 # WM Keyindings
 bind[master_grow] = MOD+l
@@ -86,11 +87,13 @@ bind[mvws_6] = MOD+Shift+6
 bind[quit] = MOD+Shift+q
 bind[restart] = MOD+Shift+r
 bind[wind_del] = MOD+q
-bind[wind_kill] = MOD+Shift+x
 bind[bar_toggle] = MOD+z
 
 bind[ws_next_all] = Control+Down
 bind[ws_prev_all] = Control+Up
+
+bind[iconify] = Mod+s
+bind[uniconify] = Mod+Shift+s
 
 # Programs Keyindings
 program[lock] = slock
